# binance-rs-async

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  renovate.json  rustfmt.toml
.github/workflows/: clippy.yml  onrelease.yml  release.yml  rust.yml
docs/: margin.md
examples/: README.md  binance_endpoints.rs  binance_futures.rs  binance_margin.rs  binance_save_all_trades.rs  binance_websockets.rs  binance_websockets_heejin.rs
src/: account.rs  api.rs  client.rs  config.rs  errors.rs  general.rs  lib.rs  margin.rs  market.rs  model.rs  rest_model.rs  sapi_websockets.rs  savings.rs  userstream.rs  util.rs  wallet.rs  websockets.rs  ws_model.rs
src/coin_futures/: account.rs  general.rs  market.rs  mod.rs  rest_model.rs  userstream.rs  websockets.rs  ws_model.rs
src/delivery/: account.rs  mod.rs
src/futures/: account.rs  general.rs  market.rs  mod.rs  model.rs  rest_model.rs  userstream  userstream.rs  websockets.rs  ws_model.rs
src/options/: account.rs  general.rs  market.rs  mod.rs  rest_model.rs  userstream.rs
src/portfolio_margin/: account.rs  general.rs  mod.rs  rest_model.rs  userstream.rs
test_data/: exchangeInfo.json
