[package]
name = "binance-rs-async"
version = "1.1.2"
license = "MIT OR Apache-2.0"
authors = ["Guillaume Balaine igosuki.github@gmail.com"]
edition = "2021"

description = "Async Rust Library for the Binance API"
keywords = ["cryptocurrency", "trading", "binance"]
documentation = "https://docs.rs/crate/binance-rs-async/"
repository = "https://github.com/Igosuki/binance-rs-async"
readme = "README.md"

[lib]
name = "binance"
path = "src/lib.rs"

[features]
rustls-tls = ["tungstenite/rustls-tls-webpki-roots", "tokio-tungstenite/rustls-tls", "reqwest/rustls-tls"]
native-tls = ["tungstenite/native-tls", "tokio-tungstenite/native-tls", "reqwest/default-tls"]
default = ["native-tls"]

[dependencies]
chrono = "0.4"
futures = "0.3"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"], default-features = false }
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.8"
thiserror = "1.0"
tungstenite = "0.15"
url = "2.2"
lazy_static = "1.4"
tokio-tungstenite = "0.15"
tokio = { version = "1.12", features = ["full"] }

[dev-dependencies]
csv = "1.1"
env_logger = "0.9"
tracing = { version = "0.1", features = ["release_max_level_debug", "log"] }
tokio-test = "0.4"
