[package]
name = "binance-rs-async"
version = "1.3.3"
license = "MIT OR Apache-2.0"
authors = ["Guillaume Balaine igosuki.github@gmail.com"]
edition = "2021"

description = "Async Rust Library for the Binance API"
keywords = ["cryptocurrency", "trading", "binance"]
documentation = "https://docs.rs/crate/binance-rs-async/"
repository = "https://github.com/Igosuki/binance-rs-async"
readme = "README.md"

[lib]
name = "binance"
path = "src/lib.rs"

[features]
rustls-tls = ["tokio-tungstenite/rustls-tls-webpki-roots", "reqwest/rustls-tls"]
native-tls = ["tokio-tungstenite/native-tls", "reqwest/native-tls"]
default = ["native-tls", "futures_api"]
futures_api = []
margin_api = []
savings_api = []
wallet_api = []
all_apis = ["futures_api", "margin_api", "savings_api", "wallet_api"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"], default-features = false }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"
serde_repr = "0.1"
thiserror = "2.0"
url = "2.5"
tokio-tungstenite = "0.21"
tokio = { version = "1.37", default-features = false, features = ["net", "sync"] }

[dev-dependencies]
csv = "1.3"
env_logger = "0.11"
tracing = { version = "0.1", features = ["release_max_level_debug", "log"] }
tokio = { version = "1.37", default-features = false, features = ["macros", "rt", "rt-multi-thread", "signal"] }
tokio-test = "0.4"
